# sem_3_lab_2

./: ArraySequence.h  BinaryTree.h  CMakeLists.txt  Dictionary.h  DynamicArray.h  Exception.h  Index.h  Matrix.h  SearchRepetitiveSeq.h  Sequence.h  SortedSequence.h  SparseVectors.h  TestBinaryTree.h  TestDictionary.h  TestIndex.h  TestMatrix.h  TestSearchRepetitiveSeq.h  TestSortedSequence.h  TestSparseVector.h  interface.h  main.cpp
