cmake_minimum_required(VERSION 3.17)
project(sem_3_lab_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(sem_3_lab_2 main.cpp interface.h ArraySequence.h BinaryTree.h Dictionary.h DynamicArray.h Exception.h Index.h Matrix.h SearchRepetitiveSeq.h Sequence.h SortedSequence.h SparseVectors.h TestBinaryTree.h TestDictionary.h TestIndex.h TestMatrix.h TestSearchRepetitiveSeq.h TestSortedSequence.h TestSparseVector.h)